--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://supaship.io/supaship_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/dist/output.css">
-    <title>Vite + React + TS</title>
+    <title>Fireship Supabase React App</title>
   </head>
   <body>
     <div id="root"></div>
